tests/good/test7.src
.IPPcode18
DEFVAR GF@counter
MOVE GF@counter string@
LABEL while
JUMPIFEQ end GF@counter string@aaa
WRITE string@counter\032obsahuje\032
WRITE GF@counter
CONCAT GF@counter GF@counter string@a
JUMP while
LABEL end